--- a/template.yaml
+++ b/template.yaml
@@ -4,9 +4,8 @@ Description: AI Pronunciation Trainer - Serverless Speech Evaluation API
 
 Globals:
     Function:
-        Timeout: 30
+        Timeout: 120
         MemorySize: 1024
-        Runtime: python3.12
         Environment:
             Variables:
                 USE_API_ASR: true
@@ -16,6 +15,11 @@ Parameters:
         Type: String
         NoEcho: true
         Description: Your OpenAI API key (get it at https://platform.openai.com/api-keys)
+
+    OpenaiApiBase:
+        Type: String
+        Default: 'https://whisper-large-v3-turbo.endpoints.kepler.ai.cloud.ovh.net/api/openai_compat/v1'
+        Description: OpenAI API base URL (default is official OpenAI API)
 
 Resources:
     # API Gateway
@@ -27,7 +31,6 @@ Resources:
                 AllowMethods: "'GET,POST,OPTIONS'"
                 AllowHeaders: "'*'"
                 AllowOrigin: "'*'"
-                AllowCredentials: true
             GatewayResponses:
                 DEFAULT_4XX:
                     ResponseParameters:
@@ -44,11 +47,9 @@ Resources:
     SpeechToScoreFunction:
         Type: AWS::Serverless::Function
         Properties:
-            CodeUri: .
-            Handler: lambdaSpeechToScore.lambda_handler
+            PackageType: Image
+            ImageUri: .
             Description: Evaluates pronunciation accuracy from recorded audio using OpenAI Whisper API
-            Layers:
-                - !Sub 'arn:aws:lambda:${AWS::Region}:145266761615:layer:ffmpeg:4'
             Environment:
                 Variables:
                     USE_API_ASR: true
@@ -61,9 +62,19 @@ Resources:
                         RestApiId: !Ref PronunciationTrainerApi
                         Path: /GetAccuracyFromRecordedAudio
                         Method: POST
+                # Warm-up event: ping function every 5 minutes to prevent cold starts
+                WarmUpEvent:
+                    Type: Schedule
+                    Properties:
+                        Schedule: rate(5 minutes)
+                        Input: '{"warmup": true, "language": "en"}'
             Tags:
                 Application: PronunciationTrainer
                 Component: SpeechEvaluation
+        Metadata:
+            Dockerfile: Dockerfile
+            DockerContext: .
+            DockerTag: python3.12-v1
 
     # CloudWatch Log Group with retention
     SpeechToScoreFunctionLogGroup:
